fixed alignment in App.js

--- a/map-app/src/components/App.css
+++ b/map-app/src/components/App.css
@@ -15,14 +15,14 @@
 
 .canvas {
   border: 1px solid blue;
-  padding: 0.5em 0.5em 0.5em;
-  margin: 0.5em 0.5em 0.5em;
+  /*padding: 0.5em 0.5em 0.5em;*/
+  /*margin: 0.5em 0.5em 0.5em;*/
 }
 
 .info_box {
   border: 1px solid blue;
-  padding: 0.5em 0.5em 0.5em;
-  margin: 0.5em 0.5em 0.5em;
+  padding: 5px;
+  margin: 5px;
   width: 75%;
 }
 
